align fix

--- a/Obligatorio/styles.css
+++ b/Obligatorio/styles.css
@@ -178,7 +178,9 @@ article{
 .inputForm{
     display:block;
 }
-
+#indexBottomForm{
+    margin-bottom:36%;
+}
 .searchBar, input {
     color: azure;
     background-color: rgb(30, 73, 192);
